k8s/applications/web/loops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loops
  labels:
    name: loops
