k8s/applications/web/loops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loops
  namespace: loops
  labels:
    app.kubernetes.io/name: loops
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: loops
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
