k8s/applications/web/loops/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loops
  namespace: loops
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "loops.pc-tips.se"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loops
          port: 80
